--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Hello world!</h1>
-    </div>
+
+    <header>
+      <section class="caixa">
+        <h1>Compre seu medicamento secreto</h1>
+      </section>
+    </header>
+
+
+    <main>
+      <div id="container">
+
+        <div id="div-filha">
+          <label for="instrução1">
+            Insira o nome do medicamento e o offset secreto para cifrar o nomed
+          </label>
+          <input id="mensagem-portugues" type="text" value=" "> </input>
+          <button id="Cifrar">Cifrar</button>
+          <output id="resposta1"> "  " </output>
+        </div>       
+
+        <div id="div-filha">
+          <label for="instrução1">
+            Insira o código com as orientações e clique em Decifrar
+          </label>
+          <input id="mensagem-portugues" type="text" value=" "> </input>
+          <button id="Cifrar">Decifrar</button>
+          <output id="resposta1"> "  " </output>
+        </div>     
+      </div>
+
+    </main>
     <script src="index.js" type="module"></script>
   </body>
 </html>
