--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-    <div id="main-container">
-
+ 
       <main>
         
         <section class="caixa">
 
-          <h1>Digite a chave antes de Cifrar ou Decifrar suas mensagens</h1>
+          <h1>Digite a chave para Cifrar ou Decifrar suas mensagens</h1>
 
           <div class="key">
             <label for="offset">Chave</label>
@@ -21,21 +19,21 @@
           </div>
 
           <div class ="encrypt">
-            <input type="text" id="textencrypt">
+            <textarea id="textencrypt" cols="10" rows="10"></textarea>
             <button id="btnsend1"> Cifrar </button>
-            <p id="answer1"></p></p>
+            <textarea id="answer1" cols="10" rows="10"></textarea>
           </div>
 
           <div class ="decrypt">
-            <input type="text" id="textdecrypt">
+            <textarea id="textdecrypt" cols="10" rows="10"></textarea>
             <button id="btnsend2"> Decifrar </button>
-            <p id="answer2"></p></p>
+            <textarea id="answer2" cols="10" rows="10"></textarea>
           </div>
 
         </section>
 
       </main>
-    </div>
+ 
     <script src="index.js" type="module"></script>
   </body>
 </html>
