inclusão do Readme

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,11 @@
             <textarea id="answer2" cols="10" rows="10"></textarea>
           </div>
 
+          <button id= "btnModal" class="btninstruct">?</button>
+        
         </section>
+
+        <div class="modal">alallalala</div>
 
       </main>
  
