--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
             <textarea id="answer2" cols="10" rows="10" placeholder="Bloco 4"  ></textarea>
           </div>
       
+
+
           <button id= "btnModal" class="btninstruct">?</button>
         
         </section>
@@ -40,10 +42,9 @@
             <p>Digite a chave (número) no campo "offset" </p>
           <h3>Para CIFRAR</h3>
             <p>Digite a mensagem dentro do bloco 1, aperte no botão "CIFRAR" e obtenha a mensagem cifrada dentro do bloco 2</p>
-
           <h3>Para DECIFRAR</h3>
           <p>Digite a mensagem cifrada dentro do bloco 3, aperte no botão "DECIFRAR" e obtenha a mensagem no bloco 2</p>
-
+          <p>Esta aplicação não aceita 'ç' ou caracteres especiais/p>
           <button id= "btnFecharModal" class="fecharModal">X</button>
 
         </div>
