--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Rotas</title>
+    <title>Cifra Rotas</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
  
       <main>
         
-        <section class="caixa">
+        <section class="container">
 
           <h1>Digite a chave para Cifrar ou Decifrar suas mensagens</h1>
 
@@ -37,14 +37,14 @@
         <div class="modal">
           
           <h2>Orientações de uso</h2>
-            <p>Digite a chave (número) no campo "offset" </p>
+          <p>Digite a chave (número) no campo "offset" </p>
           <h3>Para CIFRAR</h3>
-            <p>Digite a mensagem dentro do bloco 1, aperte no botão "CIFRAR" e obtenha a mensagem cifrada dentro do bloco 2</p>
+          <p>Digite a mensagem dentro do bloco 1, aperte no botão "CIFRAR" e obtenha a mensagem cifrada dentro do bloco 2</p>
           <h3>Para DECIFRAR</h3>
           <p>Digite a mensagem cifrada dentro do bloco 3, aperte no botão "DECIFRAR" e obtenha a mensagem no bloco 4</p>
           <p>Esta aplicação não aceita 'ç' ou caracteres especiais</p>
           <p>Os números não serão cifrados</p>
-          <button id= "btnFecharModal" class="fecharModal">X</button>
+          <button id= "btnHideModal" class="hideModal">X</button>
 
         </div>
 
