--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         
         <section class="container">
 
-          <h1>Digite a chave para Cifrar ou Decifrar suas mensagens</h1>
+          <h1>Digite suas mensagens</h1>
 
           <div class="key">
             <label for="offset">Chave</label>
